<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:weightSum="1"
              android:background="#434F5D">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.4"
        android:weightSum="1"
        android:orientation="vertical">

        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.43"
            android:alpha="100"></View>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.2"
            android:gravity="center"
            android:text="MOMENTS"
            android:textSize="35sp"
            android:textColor="#7C8799"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.37">
        </View>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.08"
        android:orientation="horizontal"
        android:weightSum="1">

        <View
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.11"
            android:focusableInTouchMode="true"></View>

            <AutoCompleteTextView
                android:id="@+id/email"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.78"
                android:hint="@string/prompt_email"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:singleLine="true"
                android:drawableLeft="@drawable/email"
                android:background="@drawable/rounded_edittext_up"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.002"
        android:orientation="horizontal">

        <View
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.11"></View>

        <View
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.78"
            android:background="#434F5D"></View>


    </LinearLayout>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.08"
            android:orientation="horizontal"
            android:weightSum="1">

        <View
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.11"
            android:focusableInTouchMode="true"></View>

        <EditText
            android:id="@+id/password"
            android:layout_width="0dp"
            android:layout_weight="0.78"
            android:layout_height="match_parent"
            android:hint="@string/prompt_password"
            android:imeActionId="@+id/login"
            android:imeActionLabel="@string/action_sign_in_short"
            android:imeOptions="actionUnspecified"
            android:inputType="textPassword"
            android:maxLines="1"
            android:singleLine="true"
            android:drawableLeft="@drawable/lock"
            android:background="@drawable/rounded_edittext_down"/>


    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.02"></View>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.08"
        android:orientation="horizontal"
        android:weightSum="1">

        <View
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.11"></View>

        <Button
            android:id="@+id/sign_in"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.78"
            android:text="@string/action_sign_in_short"
            android:textAllCaps="false"
            android:textColor="#FFFFFF"
            android:textSize="18sp"
            android:gravity="center"
            android:background="@drawable/rounded_button"/>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.08"></View>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.08"
        android:orientation="horizontal"
        android:weightSum="1">

        <View
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.11"></View>

        <com.facebook.login.widget.LoginButton
            android:id="@+id/sign_in_facebook"
            android:layout_width="0dp"
            android:layout_weight="0.78"
            android:layout_height="800dp"
            android:textSize="18sp"
            android:layout_gravity="center_horizontal|center_vertical"
            android:layout_marginBottom="30dp"
            android:layout_marginTop="30dp"
            />


        <!--
                <Button
            android:id="@+id/sign_in_facebook"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.78"
            android:text="@string/sign_in_with_facebook"
            android:textAllCaps="false"
            android:textColor="#FFFFFF"
            android:textSize="18sp"
            android:gravity="center"
            android:background="@drawable/rounded_button_facebook"/>

        -->
    </LinearLayout>
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.07"
        android:weightSum="1"
        android:orientation="vertical">

        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.6"></View>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.4"
            android:weightSum="1"
            android:orientation="horizontal">

            <View
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.35"></View>

            <TextView
                android:id="@+id/sign_up"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/sign_up"
                android:textColor="#7C8799"/>

            <View
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.3"></View>

            <TextView
                android:id="@+id/skip"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/skip"
                android:textColor="#7C8799"/>

        </LinearLayout>

    </LinearLayout>




</LinearLayout>