<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/add_moments"
            android:icon="@drawable/ic_menu_camera"
            android:title="Add Moments"/>
        <item
            android:id="@+id/view_list"
            android:icon="@drawable/ic_menu_gallery"
            android:title="View Moments List"/>
        <item
            android:id="@+id/map_show"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="View Moments on Map"/>

    </group>


</menu>
