<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:weightSum="1"
              android:background="#434F5D">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.4"
        android:weightSum="1"
        android:orientation="vertical">

        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.43"
            android:alpha="100"></View>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.2"
            android:gravity="center"
            android:text="MOMENTS"
            android:textSize="35sp"
            android:textColor="#7C8799"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.37">
        </View>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.08"
        android:orientation="horizontal"
        android:weightSum="1">

        <View
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.11"></View>

        <AutoCompleteTextView
            android:id="@+id/register_email"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.78"
            android:hint="@string/prompt_email"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:singleLine="true"
            android:drawableLeft="@drawable/email"
            android:background="@drawable/rounded_edittext_up"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.002"
        android:orientation="horizontal">

        <View
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.11"></View>

        <View
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.78"
            android:background="#434F5D"></View>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.08"
        android:orientation="horizontal"
        android:weightSum="1">

        <View
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.11"></View>

        <EditText
            android:id="@+id/register_password"
            android:layout_width="0dp"
            android:layout_weight="0.78"
            android:layout_height="match_parent"
            android:hint="@string/prompt_password"
            android:imeActionId="@+id/login"
            android:imeActionLabel="@string/action_sign_in_short"
            android:imeOptions="actionUnspecified"
            android:inputType="textPassword"
            android:maxLines="1"
            android:singleLine="true"
            android:drawableLeft="@drawable/lock"
            android:background="@drawable/rounded_edittext_down"/>


    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.02"></View>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.08"
        android:orientation="horizontal"
        android:weightSum="1">

        <View
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.11"></View>

        <Button
            android:id="@+id/register"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.78"
            android:text="@string/register"
            android:textAllCaps="false"
            android:textColor="#FFFFFF"
            android:textSize="18sp"
            android:gravity="center"
            android:background="@drawable/rounded_button"/>
    </LinearLayout>










</LinearLayout>